# aviCable

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.rst  docker-compose.debug.yml  docker-compose.production.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/cables/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/cables/fixtures/: cables.xml  cables_nomenclatures.xml
backend/cables/migrations/: 0001_initial.py  0002_equipment_uuid.py  0003_equipment_gen_uuid.py  0004_equipment_alter_uuid.py  0005_remove_diagnosis_condition_and_more.py  0006_diagnosis_change_advice_diagnosis_technical_proposal_and_more.py  0006_remove_operation_operation_type_alter_equipment_type.py  0007_remove_infrastructure_geo_area_infrastructure_areas.py  0008_remove_diagnosis_sgmt_veget_integr_risk_and_more.py  0009_alter_diagnosis_sgmt_landscape_integr_risk_and_more.py  0010_remove_diagnosis_pole_type_diagnosis_arming.py  0011_operation_neutralization_level.py  0012_remove_infrastructure_owner_and_more.py  0013_diagnosis_burial_advice_diagnosis_visibility_advice.py
backend/cables/migrations.old/: 0002_initial.py  0005_lineoperation_pointoperation_and_more.py
backend/cables/tests/: test_actions.py  test_diagnosis.py  (+2 more)
backend/commons/: models.py
backend/config/: settings.py  urls.py
backend/geo_area/: urls.py  views.py
backend/map_layers/: admin.py  models.py  serializers.py
backend/media/: admin.py  models.py  serializers.py  urls.py  views.py
backend/mortality/: admin.py  models.py  serializers.py  views.py
backend/species/: admin.py  models.py  serializers.py  views.py
backend/users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+220 files in other folders)
